# End_2_End_RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
app/: streamlit_app.py
evaluation/: golden_questions.csv
notebooks/: qwen_pdf_rag_lab.ipynb
src/: chunking.py  embeddings.py  evaluation.py  llm_qwen.py  loaders.py  metadata.py  ocr.py  pipeline.py  rag_chain.py  summarizer.py  vectorstore.py
tests/: test_GH_AI.py  test_chunking.py  test_env.py  test_evaluation.py  test_metadata.py
vectorstore/faiss_index/: index.faiss  index.pkl
